added meta to head, added first set of content to body

--- a/Index.html
+++ b/Index.html
@@ -1,14 +1,38 @@
 !<!DOCTYPE html>
-<head>
+<html lang="en">
 
-<title>Martin's Portfolio</title>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Martin Olson">
+    <meta name="description" content ="Martin Olsons Portfolio">
+    <style></style>
+    <title>Martin Olson's Portfolio</title>
 
 </head>    
 
 <body>
+    <header>
+        <div id ="abreviatedInitials">MO</div>
+        <h1>Martin Olson</h1>
+    </header>
 
+    <main>
+        <div>
+            <Section id ="About Me">
+                <h2>About Me</h2>
+                
+                <h3>web developer</h3>  
+                <time>Since 2021</time>
+                <p>Completing coder academy fast track bootcamp</p>
+            </Section>
+        </div>
+    </main>
 
+    <footer>
     
+    </footer>
+
 </body>
 
 </html>
