added some css styling

--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Martin Olson">
     <meta name="description" content ="Martin Olsons Portfolio">
-    <style></style>
+    <link rel="stylesheet" href="styles.css">
     <title>Martin Olson's Portfolio</title>
 
 </head>    
