more css work, specficially colors

--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,4 @@
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <div id ="abreviatedInitials">MO</div>
+        <span id ="abreviatedInitials"><H2>MO</H2></span>
         <h1>Martin Olson</h1>
     </header>
 
