fixed the typo that was making this not work. FML

--- a/Index.html
+++ b/Index.html
@@ -13,13 +13,13 @@
 
 <body>
     <header>
-        <span id ="abreviatedInitials"><H2>MO</H2></span>
+        <div class ="abbreviatedInitials">MO</div>
         <h1>Martin Olson</h1>
     </header>
 
     <main>
         <div>
-            <Section id ="About Me">
+            <Section class ="About Me">
                 <h2>About Me</h2>
                 
                 <h3>web developer</h3>  
