--- a/Index.html
+++ b/Index.html
@@ -18,14 +18,31 @@
     </header>
 
     <main>
-        <div>
-            <Section class ="About Me">
+        <div class ="sidebar">
+            TODO Sidebar
+        </div>
+
+        <div class = "resume content">
+            <section class ="About Me">
                 <h2>About Me</h2>
                 
                 <h3>web developer</h3>  
                 <time>Since 2021</time>
                 <p>Completing coder academy fast track bootcamp</p>
-            </Section>
+            </section>
+                
+            <section class ="Education">
+                TODO: Education section
+            </section>
+
+            <section class ="Experience">
+                TODO Experience Section
+            </section>
+
+            <section class ="projects">
+                TODO Projects section
+            </section>
+
         </div>
     </main>
 
