added content to education section of index

--- a/Index.html
+++ b/Index.html
@@ -33,6 +33,8 @@
                 
             <section class ="Education">
                 TODO: Education section
+                <time> August 2021</time>
+                <p>Enrolled in Coder Academy Fast Track Bootcamp</p>
             </section>
 
             <section class ="Experience">
@@ -42,7 +44,7 @@
             <section class ="projects">
                 TODO Projects section
             </section>
-
+ 
         </div>
     </main>
 
