finished education section. added references to html classes in CSS sheet

--- a/Index.html
+++ b/Index.html
@@ -13,17 +13,17 @@
 
 <body>
     <header>
-        <div class ="abbreviatedInitials">MO</div>
-        <h1>Martin Olson</h1>
+        <div class ="abbreviatedInitials">MO </div><!--should this just be an image?-->
+        <h1 class ="nameInTitle">Martin Olson</h1>
     </header>
 
     <main>
-        <div class ="sidebar">
+        <div class ="Sidebar">
             TODO Sidebar
         </div>
 
-        <div class = "resume content">
-            <section class ="About Me">
+        <div class = "resumeContent">
+            <section class ="aboutMe">
                 <h2>About Me</h2>
                 
                 <h3>web developer</h3>  
@@ -33,15 +33,23 @@
                 
             <section class ="Education">
                 TODO: Education section
-                <time> August 2021</time>
+                <time>August 2021</time>
                 <p>Enrolled in Coder Academy Fast Track Bootcamp</p>
+                <time>September 2020</time>
+                <p>Competed Graduate Diploma of Cybersecurity at Edith Cowan University</p>
+                <time>December 2017</time>
+                <p>Completed Master of Political Economy at the Universty of Sydney</p>
+                <time>December 2012</time>
+                <p>Completed Master of Strategic Studies at the Australian National University</p>
+                <time>April 2011</time> 
+                <p>Completed Bachelor of Science with Honours, majoring in microbiology</p>
             </section>
 
             <section class ="Experience">
                 TODO Experience Section
             </section>
 
-            <section class ="projects">
+            <section class ="Projects">
                 TODO Projects section
             </section>
  
