added placeholder image to sidebar

--- a/Index.html
+++ b/Index.html
@@ -20,6 +20,7 @@
     <main>
         <div class ="Sidebar">
             TODO Sidebar
+            <img src="A cat.jpg" alt="Placeholder image of a cat" width= "275px" height="183">
         </div>
 
         <div class = "resumeContent">
@@ -32,7 +33,7 @@
             </section>
                 
             <section class ="Education">
-               
+               <H2>Education</H2>
                 <time>August 2021</time>
                 <p>Enrolled in Coder Academy Fast Track Bootcamp</p>
                 <time>September 2020</time>
