--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,9 @@
     <meta name="author" content="Martin Olson">
     <meta name="description" content ="Martin Olsons Portfolio">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> 
     <title>Martin Olson's Portfolio</title>
 
 </head>    
