added more HTML content

--- a/Index.html
+++ b/Index.html
@@ -30,7 +30,7 @@
             <section class ="aboutMe">
                 <h2>About Me</h2>
                 
-                <h3>web developer</h3>  
+                <h3>Web Developer</h3>  
                 <time>Since 2021</time>
                 <p>Completing coder academy fast track bootcamp</p>
             </section>
@@ -50,11 +50,25 @@
             </section>
 
             <section class ="Experience">
+                <H2>Experience</H2>
                 TODO Experience Section
             </section>
 
             <section class ="Projects">
+                <h2>Projects</h2>
                 TODO Projects section
+            </section>
+
+            <section class ="Skills">
+                <H2>Skills</H2>
+                    <ul class="ListOfSkills">
+                        <li>html</li>
+                        <li>CSS</li>
+                        <li>Blender</li>
+                        <li>Unity</li>
+
+                    </ul>
+                TODO Skills
             </section>
  
         </div>
