reformated elements in education section

--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <div class ="abbreviatedInitials">MO </div><!--should this just be an image?-->
+        <div class ="abbreviatedInitials">MO </div>
         <h1 class ="nameInTitle">Martin Olson</h1>
     </header>
 
@@ -31,36 +31,41 @@
                 <h2>About Me</h2>
                 
                 <h3>Web Developer</h3>  
-                <time>Since 2021</time>
-                <p>Completing coder academy fast track bootcamp</p>
+                <time>Since 2021&nbsp;&ndash;&nbsp;</time>
+                <span>Completing coder academy fast track bootcamp</span>
             </section>
                 
             <section class ="Education">
-               <H2>Education</H2>
-                <time>August 2021</time>
-                <p>Enrolled in Coder Academy Fast Track Bootcamp</p>
-                <time>September 2020</time>
-                <p>Competed Graduate Diploma of Cybersecurity at Edith Cowan University</p>
-                <time>December 2017</time>
-                <p>Completed Master of Political Economy at the Universty of Sydney</p>
-                <time>December 2012</time>
-                <p>Completed Master of Strategic Studies at the Australian National University</p>
-                <time>April 2011</time> 
-                <p>Completed Bachelor of Science with Honours, majoring in microbiology</p>
+               <H3>Education</H3>
+                <time>August 2021&nbsp;&ndash;&nbsp;</time>
+                <span>Enrolled in Coder Academy Fast Track Bootcamp</span>
+                <p></p>
+                <time>September 2020&nbsp;&ndash;&nbsp;</time>
+                <span>Competed Graduate Diploma of Cybersecurity at Edith Cowan University</span>
+                <p></p>
+                <time>December 2017&nbsp;&ndash;&nbsp;</time>
+                <span>Completed Master of Political Economy at the Universty of Sydney</span>
+                <p></p>
+                <time>December 2012&nbsp;&ndash;&nbsp;</time>
+                <span>Completed Master of Strategic Studies at the Australian National University</span>
+                <p></p>
+                <time>April 2011&nbsp;&ndash;&nbsp;</time> 
+                <span>Completed Bachelor of Science with Honours, majoring in microbiology</span>
+                <p></p>
             </section>
 
             <section class ="Experience">
-                <H2>Experience</H2>
+                <H3>Experience</H3>
                 TODO Experience Section
             </section>
 
             <section class ="Projects">
-                <h2>Projects</h2>
+                <h3>Projects</h3>
                 TODO Projects section
             </section>
 
             <section class ="Skills">
-                <H2>Skills</H2>
+                <H3>Skills</H3>
                     <ul class="ListOfSkills">
                         <li>html</li>
                         <li>CSS</li>
