created blog. added separate css file for blog. added links to index sidebar as per assignment requirements

--- a/Index.html
+++ b/Index.html
@@ -8,22 +8,33 @@
     <meta name="description" content ="Martin Olsons Portfolio">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> 
     <title>Martin Olson's Portfolio</title>
 
 </head>    
 
 <body>
     <header>
+    <div class = "Heading">
         <div class ="abbreviatedInitials">MO</div>
         <h1 class ="nameInTitle">Martin Olson</h1>
     </header>
-
+    </div>
     <main>
         <div class ="Sidebar">
-            TODO Sidebar
-            <img src="A cat.jpg" alt="Placeholder image of a cat" width= "275px" height="183">
+            <Section class ="Photo">
+            <img src="A cat.jpg" alt="Placeholder image of a cat">
+            </Section>
+            <section class="NavigationLinks">
+                <span>Contact Details</span>
+                <span><a href="https://github.com/MartinO55">My Github Profile</a></span>
+                <span><a href="https://www.linkedin.com/in/olsonmartin/">My Linkedin</a></span>
+                <Span><a href="blog.html">My Blog</a></Span>
+                <Span><a href="Martin Olson CV updated Jan02.docx">My CV</a></Span>
+                <span>a third HTML page about me</span>
+                <span>a fourth HTML page about me</span>
+            </section>
         </div>
 
         <div class = "resumeContent">
@@ -61,6 +72,7 @@
             <section class ="Projects">
                 <h3>Projects</h3>
                 TODO Projects section
+                <span>My finished Games</span>
             </section>
 
             <section class ="Skills">
