formatting for blog, changed docx CV to pdf CV

--- a/Index.html
+++ b/Index.html
@@ -30,8 +30,8 @@
                 <span>Contact Details</span>
                 <span><a href="https://github.com/MartinO55">My Github Profile</a></span>
                 <span><a href="https://www.linkedin.com/in/olsonmartin/">My Linkedin</a></span>
-                <Span><a href="blog.html">My Blog</a></Span>
-                <Span><a href="Martin Olson CV updated Jan02.docx">My CV</a></Span>
+                <Span><a href="blog.html">My Blog</a></Span><!--Note to self, 86 this entirely after the assignment is handed in-->
+                <Span><a href="Martin Olson CV updated Jan02.pdf">My CV</a></Span>
                 <span>a third HTML page about me</span>
                 <span>a fourth HTML page about me</span>
             </section>
