--- a/blog.html
+++ b/blog.html
@@ -12,12 +12,15 @@
 </head>
 <body>
     <header class ="BlogTitle">
-        <H1>Thank god for Lorem Ipsum, AmIRight?</H1>
+        <H1>Thank god for Lorem Ipsum</H1><!--So I have never written a blog post in my life-->
     </header>
+
+    <div class = "navigation"></div>
 
     <div class ="blogPosts">
         <Div class="post1">
             <H3><div><span>Post title&nbsp;&ndash;&nbsp;Date Posted&nbsp;&ndash;&nbsp;</span><time>June 2020</time></div></H3>
+            <span class="Post1Image">Image for post 1</span>
             <span>
                 <p></p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque maximus mattis velit cursus mattis. Suspendisse vehicula mauris ac turpis imperdiet varius. Cras suscipit diam a consequat molestie. Etiam euismod dui eu aliquam congue. Phasellus condimentum odio et ex imperdiet iaculis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Phasellus massa elit, tempor vitae neque eget, pretium tincidunt lectus. Nulla ac ultrices eros. Aenean ultrices dapibus nulla, quis condimentum tellus ultricies at. Integer pulvinar aliquam pretium. Aliquam faucibus faucibus libero, sit amet aliquam urna congue a. Maecenas tincidunt ante feugiat velit congue fermentum. Aliquam congue massa et convallis pulvinar. Curabitur mattis libero nec nisl tristique, tincidunt lacinia nisi laoreet.
@@ -27,6 +30,7 @@
                 Cras commodo finibus libero mollis cursus. In nec purus dolor. Fusce porta velit non est gravida feugiat. Etiam bibendum euismod magna, quis suscipit ligula laoreet ut. Ut porta auctor mi eu cursus. Cras auctor lacinia nisl sit amet imperdiet. Donec quis enim id nibh rutrum condimentum id eu lacus. Maecenas at odio id nibh consequat vehicula. Morbi eget rutrum nisi. Aliquam rutrum vestibulum elit, vel lacinia dui dignissim a. 
                 <p></p>
             </span>
+            <Span><h4>Author: Martin Olson</h4></Span>
         </Div>
 
         <div class="post2">
@@ -41,8 +45,11 @@
                 <p></p>
                 Etiam nisl lacus, varius quis gravida eleifend, fermentum in nunc. Vestibulum diam sem, varius id ligula ut, suscipit dapibus libero. Vestibulum aliquet dui ac semper porta. Curabitur vitae efficitur odio. Sed a odio commodo, pulvinar dui et, semper lorem. Donec malesuada venenatis risus, id ullamcorper augue. Nam cursus dictum lacinia. Vivamus posuere ligula gravida ante tincidunt, at pellentesque mauris rhoncus. Duis rutrum quis ligula et porttitor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eget tincidunt velit. Nunc at erat id ex laoreet malesuada.
                 <p></p>
-                Etiam ante mauris, venenatis quis dolor nec, rhoncus consequat neque. Etiam lacus dolor, hendrerit sed neque et, ultrices imperdiet nibh. Fusce non urna turpis. Mauris a diam nunc. Nunc sagittis metus eu ipsum feugiat. </span>
+                Etiam ante mauris, venenatis quis dolor nec, rhoncus consequat neque. Etiam lacus dolor, hendrerit sed neque et, ultrices imperdiet nibh. Fusce non urna turpis. Mauris a diam nunc. Nunc sagittis metus eu ipsum feugiat. 
                 <p></p>
+            </span>
+            <Span><h4>Author: Martin Olson</h4></Span>
+                
         </div>
 
         <div class="post3">
@@ -57,8 +64,10 @@
                 <p></p>
                 Sed non turpis ac ipsum semper commodo eget vel lorem. Etiam nec enim aliquet nisl commodo posuere eget et velit. Vestibulum ut urna vestibulum, congue nulla vel, tincidunt odio. Ut vitae urna at lorem facilisis consectetur. Phasellus porttitor eros quis elit pharetra, eu varius urna aliquet. Integer pellentesque pretium convallis. Ut quam risus, euismod vitae ligula quis, tempus hendrerit arcu. Aliquam sed leo sit amet erat sodales rutrum.
                 <p></p>
-                Nunc fermentum sed felis malesuada aliquam. In dictum pretium ligula non volutpat. Nunc interdum lorem et fermentum aliquam. Mauris vulputate nunc eleifend lectus pellentesque, sit amet viverra tellus vulputate. Nam porta lacus velit, id lobortis arcu posuere ac. Praesent sed blandit dolor. In a consequat orci, a venenatis magna. Vestibulum malesuada urna dui, id volutpat ante bibendum ut. Aliquam bibendum metus massa, non blandit quam consequat vitae. Donec lacinia risus molestie tortor porttitor, id aliquam massa tempus. Cras ultricies euismod lorem, quis euismod risus mollis eu. Donec porta faucibus. </span>
+                Nunc fermentum sed felis malesuada aliquam. In dictum pretium ligula non volutpat. Nunc interdum lorem et fermentum aliquam. Mauris vulputate nunc eleifend lectus pellentesque, sit amet viverra tellus vulputate. Nam porta lacus velit, id lobortis arcu posuere ac. Praesent sed blandit dolor. In a consequat orci, a venenatis magna. Vestibulum malesuada urna dui, id volutpat ante bibendum ut. Aliquam bibendum metus massa, non blandit quam consequat vitae. Donec lacinia risus molestie tortor porttitor, id aliquam massa tempus. Cras ultricies euismod lorem, quis euismod risus mollis eu. Donec porta faucibus. 
                 <p></p>
+            </span>
+            <Span><h4>Author: Martin Olson</h4></Span>
         </div>
 
         <Div class="post4">
@@ -75,8 +84,10 @@
                 <p></p>
                 Nulla sit amet rhoncus nisl. Curabitur sit amet tristique ipsum. Praesent dictum dignissim condimentum. In at volutpat felis, vitae dapibus magna. Duis pretium ipsum vel rhoncus congue. Quisque tristique, velit sit amet accumsan gravida, massa eros ornare metus, vitae hendrerit mauris tellus eget tellus. Maecenas justo sem, pellentesque rhoncus commodo quis, pulvinar quis arcu. Integer nec condimentum nisl, vitae pharetra odio. Integer posuere, lectus quis ullamcorper sagittis, magna dolor facilisis ex, a aliquam ligula erat at metus. Nullam vitae orci a elit bibendum dignissim in condimentum lorem. Phasellus mattis, dolor sodales scelerisque pulvinar, enim massa pellentesque orci, vel facilisis tellus urna vehicula ex.
                 <p></p>
-                Morbi dui sem, posuere id mauris ut, egestas pellentesque justo. Cras suscipit purus eget eros aliquam, id bibendum ex malesuada. Phasellus efficitur, velit non tincidunt rhoncus, lectus ex congue leo, vitae faucibus purus nunc sed ante. Sed mattis. </span>
+                Morbi dui sem, posuere id mauris ut, egestas pellentesque justo. Cras suscipit purus eget eros aliquam, id bibendum ex malesuada. Phasellus efficitur, velit non tincidunt rhoncus, lectus ex congue leo, vitae faucibus purus nunc sed ante. Sed mattis. 
                 <p></p>
+            </span>
+                <Span><h4>Author: Martin Olson</h4></Span>
         </Div>
 
         <div class ="post5">
@@ -93,8 +104,10 @@
                 <p></p>
                 Nam vitae nisl elementum, fermentum purus vitae, volutpat dui. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Vivamus sed nibh at lacus lacinia vestibulum ac a turpis. Curabitur quis finibus ligula. Curabitur interdum tellus sed feugiat ultricies. Duis imperdiet lorem in blandit posuere. Proin euismod vel est quis fringilla. Phasellus consequat, dui a efficitur condimentum, risus dolor fringilla odio, ac suscipit odio metus tempus metus. Aenean sed semper eros. Curabitur tincidunt tortor at ex sollicitudin porttitor sit amet vel arcu. Morbi congue ultrices lectus, nec commodo magna consequat a. Pellentesque venenatis enim ut est fermentum ullamcorper.
                 <p></p>
-                Etiam interdum a lorem vel eleifend. Pellentesque eu semper eros. Morbi diam velit, tristique nec interdum sit amet, tempus a mauris. Aliquam egestas vel nunc eu consectetur. Morbi pharetra luctus purus ac sodales. Etiam eu pharetra quam, bibendum congue elit. Morbi pellentesque, erat ac maximus semper, sapien ex consectetur lorem, nec viverra nisi dolor sit amet tortor. Mauris vehicula ut risus sit amet accumsan. Donec sagittis magna eros, a sagittis sem tincidunt eget. Pellentesque a leo convallis, scelerisque enim nec, porttitor urna. Aenean orci arcu, luctus nec commodo id, viverra. </span>
+                Etiam interdum a lorem vel eleifend. Pellentesque eu semper eros. Morbi diam velit, tristique nec interdum sit amet, tempus a mauris. Aliquam egestas vel nunc eu consectetur. Morbi pharetra luctus purus ac sodales. Etiam eu pharetra quam, bibendum congue elit. Morbi pellentesque, erat ac maximus semper, sapien ex consectetur lorem, nec viverra nisi dolor sit amet tortor. Mauris vehicula ut risus sit amet accumsan. Donec sagittis magna eros, a sagittis sem tincidunt eget. Pellentesque a leo convallis, scelerisque enim nec, porttitor urna. Aenean orci arcu, luctus nec commodo id, viverra. 
                 <p></p>
+            </span>
+                <Span><h4>Author: Martin Olson</h4></Span>    
        </div>
     </div>
 </body>
