added a link back to my profile

--- a/blog.html
+++ b/blog.html
@@ -13,9 +13,11 @@
 <body>
     <header class ="BlogTitle">
         <H1>Thank god for Lorem Ipsum</H1><!--So I have never written a blog post in my life, and this is built purely to satisfy requirements-->
+        <p></p>
+       
     </header>
 
-    <div class = "navigation"></div>
+    <div class = "navigation"> <a href="Index.html">back to my profile</a></div>
 
     <div class ="blogPosts">
         <Div class="ABlogPost">
