final commit of the day... not actually sure how much changed here

--- a/Index.html
+++ b/Index.html
@@ -24,17 +24,17 @@
     <main>
         <div class ="Sidebar">
             <Section class ="Photo">
-            <img src="A cat.jpg" alt="Placeholder image of a cat">
+            <img src="A cat.jpg" alt="Placeholder image of a cat" width =200>
             </Section>
-            <section class="NavigationLinks">
-                <span>Contact Details</span>
-                <span><a href="https://github.com/MartinO55">My Github Profile</a></span>
-                <span><a href="https://www.linkedin.com/in/olsonmartin/">My Linkedin</a></span>
-                <Span><a href="blog.html">My Blog</a></Span><!--Note to self, 86 this entirely after the assignment is handed in-->
-                <Span><a href="Martin Olson CV updated Jan02.pdf">My CV</a></Span>
-                <span>a third HTML page about me</span>
-                <span>a fourth HTML page about me</span>
-            </section>
+            <ul class="NavigationLinks">
+                <li>Contact Details</span>
+                <li><a href="https://github.com/MartinO55">My Github Profile</a></span>
+                <li><a href="https://www.linkedin.com/in/olsonmartin/">My Linkedin</a></span>
+                <li><a href="blog.html">My Blog</a></Span><!--Note to self, 86 this entirely after the assignment is handed in-->
+                <li><a href="Martin Olson CV updated Jan02.pdf">My CV</a></Span>
+                <li>a third HTML page about me</span> <!--contacts?-->
+                <li>a fourth HTML page about me</span><!--About me?-->
+            </ul>
         </div>
 
         <div class = "resumeContent">
