so this is the I couldnt get the sidebar to stick to the right and the landing to stay in the center version, that just flips it around and makes it a stylistic choice

--- a/Index.html
+++ b/Index.html
@@ -29,7 +29,7 @@
     </header>
     <main class="introPage">
         <div class ="LandingPage">
-            <h1 class="primaryHeading">I'm Martin</h1><!--front and centre-->
+            <h1 class="primaryHeading">Hi, I'm Martin</h1><!--front and centre-->
 
             <H2 class ="blurb">I make stuff for the web</H2>
         </div>
