changed the navigation link classes to make them jump individually

--- a/Index.html
+++ b/Index.html
@@ -39,10 +39,10 @@
             <img class="photoOfMe" src="A cat.jpg" alt="Placeholder image of a cat" width =200><!--the photo is mandatory for the assignment-->
             </Section>
             <ul class="NavigationLinks">
-                <li>Contact Details <!--Email link-->
-                <li class="githubLink"><a href="https://github.com/MartinO55">My Github Profile</a> <!--links are fine, make these icons-->
-                <li class="LinkedinLink"><a href="https://www.linkedin.com/in/olsonmartin/">My Linkedin</a>
-                <li class="MyCVLink"><a href="Martin Olson CV updated Jan02.pdf">My CV</a>
+                <li class="navigationLink">Contact Details <!--Email link-->
+                <li class="navigationLink"><a href="https://github.com/MartinO55">My Github Profile</a> <!--links are fine, make these icons-->
+                <li class="navigationLink"><a href="https://www.linkedin.com/in/olsonmartin/">My Linkedin</a>
+                <li class="navigationLink"><a href="Martin Olson CV updated Jan02.pdf">My CV</a>
             </ul>
         </div>
     </main>
