added more comments for planning

--- a/Index.html
+++ b/Index.html
@@ -33,6 +33,8 @@
 
             <H2 class ="blurb">I make stuff for the web</H2>
         </div>
+
+        <!--maybe button to projects here??-->
     
         <div class ="Sidebar">
             <Section class ="Photo"><!--Maybe send the photo to the logo?-->
