redid the colors on blog to match. added CSS animations to landing page. bits change color, and increase in size on :hover

--- a/Index.html
+++ b/Index.html
@@ -9,8 +9,6 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet"> <!--Need a real font-->
     <title>Martin Olson</title>
 
@@ -31,9 +29,20 @@
     </header>
     <main class="introPage">
         <div class ="LandingPage">
-            <h1 class="primaryHeading">Hi, I'm Martin</h1><!--front and centre-->
+            <h1 class="LandingPageHeading">
+                <span class ="primaryHeading">Hi, </span>
+                <span class ="primaryHeading">I'm </span>
+                <span class ="primaryHeading">Martin</span>
+            </h1><!--front and centre-->
 
-            <H2 class ="blurb">I make stuff for the web</H2>
+            <H2 class ="LandingPageblurb">
+                <span class ="blurb">I </span>
+                <span class ="blurb">make </span>
+                <span class ="blurb">stuff </span>
+                <span class ="blurb">for </span>
+                <span class ="blurb">the </span>
+                <span class ="blurb">web</span>
+            </H2>
         </div>
 
         <!--maybe button to projects here??-->
