--- a/blog.html
+++ b/blog.html
@@ -11,12 +11,21 @@
     <title>Martin Olson's Blog from 1998</title>
 </head>
 <body>
-    <header class ="BlogTitle">
-        <H1>Thank god for Lorem Ipsum</H1><!--So I have never written a blog post in my life, and this is built purely to satisfy requirements. I have no idea what a modern blog should look like-->
-       <!--And I am pretty sure it only does that,although it does have that old geocities charm-->
+    <header class ="Heading"> 
+       <div class = "Logo">
+        <h4 class ="abbreviatedInitials">MO</h4><!--this to be the logo-->
+        <h3 class ="nameInTitle">Martin Olson</h3>
+    </div>
+    <div class ="Navigation">
+         <!-- Internal Navbar goes here-->
+         <h3 class ="landingPage"><a class="NavigationLink" href="Index.html">Landing Page</a></h3>
+        <h3 class ="aboutMe"><a class="NavigationLink" href="AboutMe.html">About Me</a></h3>
+        <h3 class ="myProjects"><a class="NavigationLink" href="MyProjects.html">My Projects</a></h3>
+    </div>
     </header>
-
-    <h3 class = "navigation"> <a href="Index.html">Back to my profile</a></h3><!--Although I am not sure I want this to be attributed-->
+    <H1>Thank god for Lorem Ipsum</H1><!--So I have never written a blog post in my life, and this is built purely to satisfy requirements. I have no idea what a modern blog should look like-->
+    <!--And I am pretty sure it only does that,although it does have that old geocities charm-->
+   
 
     <div class ="blogPosts"><!--So this is where the blog posts go. Add them to the bottom of the HTML, using the same formatting for the classes to carry in the CSS formatting-->
         <Div class="ABlogPost"><!--This is the entire blog post, title, image and content-->
@@ -82,7 +91,7 @@
         </div>
 
         <Div class="ABlogPost">
-            <H3 class="postTitle"><span>I have also never had a blog In my life, It's just not something I really do&nbsp;&ndash;&nbsp;</span>13 May 2021</H3>
+            <H3 class="postTitle"><span>I have never had a blog In my life, It's just not something I really do&nbsp;&ndash;&nbsp;</span>13 May 2021</H3>
 
             <span class ="PostImage"><img src="./PhotosForBlog/karsten-winegeart-rs_x0VjRY0U-unsplash.jpg" alt="yet more royalty free images" height=100></span>
 
