--- a/MyProjects.html
+++ b/MyProjects.html
@@ -4,11 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
+
+<header class="Heading"><!--This to be the landing page-->
+    <div class = "Logo">
+        <h4 class ="abbreviatedInitials">MO</h4><!--this to be the logo-->
+        <h3 class ="nameInTitle">Martin Olson</h3>
+    </div>
+    <div class ="Navigation">
+         <!-- Internal Navbar goes here-->
+        <h3 class ="landingPage"><a class="NavigationLink" href="Index.html">Landing Page</a></h3>
+        <h3 class ="aboutMe"><a class="NavigationLink" href="AboutMe.html">About Me</a></h3>
+        <h3 class="myBlog"><a class="NavigationLink" href ="blog.html">My Blog</a></h3><!--delete Me once the project is submitted-->  
+    </div>
+</header>
 <body>
     <!--projects need to  have live sites and links to the source code-->
-    <section class ="Projects">
+    <section class ="PortfolioProjects">
         <h3>Projects</h3>
         TODO Projects section
         <span>My finished Games</span>
