--- a/MyProjects.html
+++ b/MyProjects.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Portfolio</title>
 </head>
 
 <header class="Heading"><!--This to be the landing page-->
